# extract_bits_native

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  clean_this.sh  make_this.sh
.circleci/: config.yml
gtest/: CMakeLists.txt  CMakeLists.txt.in
include/: extract_bits.hpp  extract_bits_fast_pass.hpp  extract_bits_traditional_pass.hpp  extractbits.hpp  library.hpp
src/: extract_bits.cpp  extract_bits_fast_pass.cpp  extract_bits_traditional_pass.cpp  extractbits.cpp  library.cpp  library.h  main.cpp
test/: extract_bits_native_test.cpp
